# GRiNS

./: .gitignore  README.md  gen_diffrax_ode.py  generate_params.py  mkdocs.yml  pyproject.toml  requirements.txt  simulation_run.py  topoanalyser.py
.github/workflows/: python-app.yml  python-publish.yml
TOPOS/: 11.topo  DASI.topo  README_TOPOS  TSSA.topo  TSSI.topo  TT.topo  TTSA.topo  TT_a.topo  TT_r.topo
docs/: index.md
docs/api/: IsingBoolean.md  ODE.md  ParameterGeneration.md  RACIPE.md  parameters.md
docs/dev/: build.md  docs.md  setup.md  test.md
docs/usage/: Ising_Script.md  Ising_Tutorial.md  RACIPE_Script.md  RACIPE_Tutorial.md  racipe.md
grins/: 11.py  11_test.py  __init__.py  clean_topos.py  gen_diffrax_ode.py  gen_params.py  generate_odesys.py  generate_params.py  generate_params_old.py  ising_bool.py  jax_ising.py  racipe.py  racipe_run.py  reg_funcs.py  sim_run.py  simulation_run.py
tests/: test_import.py
