[tool.poetry]
name = "grins"
version = "0.1.0"
description = ""
authors = ["MoltenEcdysone09 <pradyumnah@iisc.ac.in>", "Harshavardhan-BV <bharshavardh@iisc.ac.in>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"
jax = {extras = ["cuda12"], version = "^0.4.31"}
diffrax = "^0.6.0"
networkx = "^3.3"
rustworkx = "^0.15.1"
scipy = "^1.14.0"

[tool.poetry.extras]
cuda12 = ["jax"]

[tool.poetry.scripts]
racipe = "grins.racipe:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
