[project]
name = "grins"
version = "0.1.0"
description = ""
authors = [
    {name = "MoltenEcdysone09",email = "pradyumnah@iisc.ac.in"},
    {name = "Harshavardhan-BV",email = "bharshavardh@iisc.ac.in"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jax (>=0.5.2,<0.6.0) ; extra != 'cuda12'",
    "diffrax (>=0.6.2,<0.7.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12] (>=0.5.2,<0.6.0)",
]

[project.scripts]
racipe = "grins.racipe:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.16.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
